--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <packaging>jar</packaging>
     <groupId>net.nextpulse</groupId>
     <artifactId>postmarkapp</artifactId>
-    <version>1.1.1</version>
+    <version>1.2.0-SNAPSHOT</version>
     <url>https://github.com/yholkamp/postmark-client</url>
     <name>PostmarkClient</name>
     <description>An API client for the Postmark APIs, allowing both sending and receiving of email as well as account
